[gd_scene load_steps=6 format=2]

[ext_resource path="res://GUI/OutlineIcons/Outline.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Slots/ShopSlot.gd" type="Script" id=2]
[ext_resource path="res://Scenes/UI/ToolTip.tscn" type="PackedScene" id=3]
[ext_resource path="res://GUI/OutlineIcons/InSufficientOutline.png" type="Texture" id=4]
[ext_resource path="res://GUI/OutlineIcons/SufficientOutline.png" type="Texture" id=5]

[node name="Shop1" type="TextureRect"]
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Icon" type="TextureButton" parent="."]
margin_left = 1.0
margin_top = 1.0
margin_right = 17.0
margin_bottom = 17.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}
toolTip = ExtResource( 3 )
insuff = ExtResource( 4 )
suff = ExtResource( 5 )
default = ExtResource( 1 )
[connection signal="mouse_entered" from="Icon" to="Icon" method="_on_Icon_mouse_entered"]
[connection signal="mouse_exited" from="Icon" to="Icon" method="_on_Icon_mouse_exited"]
[connection signal="pressed" from="Icon" to="Icon" method="_on_Icon_pressed"]
